--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -150,8 +150,9 @@
                     <td>17/17</td>
                 </tr>
             </table>
-            
-            
+            These results aren't exactly amazing, 
+            but it shows that there is room for improvement in the alignment metric
+            compared to the naive metrics, especially if the goal is efficiency.
             With the alignment algorithm totally working (and quickly now), I can show some of my favorite among the newly aligned images.
             </p>
             <p>
