--- a/computational_photography/prokudin-gorskii.html
+++ b/computational_photography/prokudin-gorskii.html
@@ -63,7 +63,16 @@
             For patches of pixels in the colorized image that have consistent color, this value will be similar (low) across all 
             three channels. This may hold true even when there are changes in lighting.
             Therefore, my initial metric for the alignment will be the sum of square differences in these neighboring pixel differences.
-            I'll compute these differences for both vertical neighbors and horiztonal neighbors, adding both to the sum.
+            </p>
+            <p>
+                That is, if r and b are two dimensional arrays of brightness values, each for a different color channel, 
+                I propose that <cod>r[i,j] - r[i,j+1]</cod> and <cod>r[i,j]-r[i-1,j]</cod> give values that may be 
+                resistant to variance across channels. (Hindsight is clear, I may have been even better off trying the absolute value
+                of these values.) The corresponding sum of difference squares metric that I used is as follows:<br>
+                <cod>((r[i,j] - r[i,j+1])-(b[i,j] - b[i,j+1]))^2</cod> and <cod>((r[i,j] - r[i+1,j])-(b[i,j] - b[i+1,j]))^2</cod>
+            </p>
+            <p>
+            I'll compute these differences for both vertical neighbors and horiztonal neighbors, adding both to the sum, as shown in the expression above.
             Here is a Python implementation of the described algorithm.
             </p>
             <script src="https://gist.github.com/obroadrick/dc1727d553daf85e2e9210cad4ba2ff7.js"></script>
