--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/headshot.jpg" width="250px" class="float-md-right p-2"></p>
             <p>
-                I am a final-year undergraduate student studying computer science 
+                I am a senior undergraduate student studying computer science 
                 and math at 
                 <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
                 I'm also a proud member of
@@ -37,8 +37,8 @@
             </p>
             <h4>Research</h4>
             <p>
-                My research interests are broad and forming; I like thinking mathematically and abstractly, 
-                and I've particularly enjoyed working on projects that have meaningful impact.
+                My research interests are broad and forming. I like thinking mathematically, 
+                and I've particularly enjoyed working on projects that have social impact.
             </p>
             <h5>Statistical Election Audits</h5>
             <p>
