--- a/computational_photography/hybrid-images.html
+++ b/computational_photography/hybrid-images.html
@@ -26,18 +26,20 @@
 
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-xs-12 col-sm-8 col-md-6">
-            <h2>Computational Photography</h2>
+        <!-- <div class="col-xs-12 col-sm-8 col-md-6"> -->
+        <div class="col-xs-12 col-sm-10 col-md-10">
+            <h4>Hybrid images</h4>
             <p>
-            I'm taking a course on Computational Photography taught by 
-            <a href="http://www2.seas.gwu.edu/~pless/index.php">Professor Robert Pless</a> 
-            in Spring 2022.
-            I'll present some of my work from the course here.
+            As introduced in the 2006 SIGGRAPH paper, "Hybrid Images" by 
             </p>
-            <ul>
-            <li><a href="./prokudin-gorskii.html">Aligning and compositing images of the Prokudin-Gorskii photo collection</a>
-            <li><a href="./hybrid-images.html">Hybrid images</a>
-            </ul>
+            <p>
+            <img src="prokudin-gorskii-images/remove_rolled_bit.png" width="500" alt="remove artifact of numpy roll">
+            </p>
+            <h5>Sources</h5>
+            <p>
+            [1] <a href="https://www2.seas.gwu.edu/~pless/computationalPhotography/project2.php">Assignment from Professor Pless</a><br>
+            [2] <a href="https://stanford.edu/class/ee367/reading/OlivaTorralb_Hybrid_Siggraph06.pdf">"Hybrid Images" by Oliva, Torralba, and Schyns. In SIGGRAPH, 2006.</a>
+            </p>
         </div>
     </div>
 </div>
