--- a/computational_photography/hybrid-images.html
+++ b/computational_photography/hybrid-images.html
@@ -30,10 +30,10 @@
         <div class="col-xs-12 col-sm-10 col-md-10">
             <h4>Hybrid images</h4>
             <p>
-            As introduced in the 2006 SIGGRAPH paper, "Hybrid Images" by 
+            As introduced by Oliva et. al. in the 2006 SIGGRAPH paper, <a href="https://stanford.edu/class/ee367/reading/OlivaTorralb_Hybrid_Siggraph06.pdf">"Hybrid Images"</a>, high frequency data from one image can be combined with low frequency data from another to produce an image in which both originals can be seen at different distances.
             </p>
             <p>
-            <img src="prokudin-gorskii-images/remove_rolled_bit.png" width="500" alt="remove artifact of numpy roll">
+            <img src="hybrid-images/tree.png" width="400" alt="tree">
             </p>
             <h5>Sources</h5>
             <p>
