--- a/computational_photography/hybrid-images.html
+++ b/computational_photography/hybrid-images.html
@@ -52,18 +52,34 @@
             </p>
             <h4>Results</h4>
             <p>
-            A big fan of trees, I started by finding a nice picture of the same tree from during
+            As a big fan of trees, 
+            I began by finding a nice picture of the same tree from during
             winter and summer. I figured it would be interesting to see the leafy tree at a 
             distance but also see the details of branch positions deep into the tree when
             closer.
             Here are the results. Since this is the first result I am showing, I included
-            a graphic with the images that were produced along the way, which shows the 
-            process I used.
+            a graphic containing the images that were produced along the way, which shows the 
+            process of creating the final product.
+            </p>
+            <p>
+            <img src="hybrid-images/tree.png" width="400" alt="tree">
             </p>
             <p>
             <img src="hybrid-images/tree-process.png" width="400" alt="tree process">
-            <img src="hybrid-images/tree.png" width="400" alt="tree">
             </p>
+            <h4>Lord of the Rings</h4>
+            <p>
+            Another natural subject for me after trees is Lord of the Rings. 
+            Here is an image which at a distance shows Smeagol in his early days after
+            finding the Ring, while up close you can see the details of an angry Gollum.
+            </p>
+            <p>
+            <img src="hybrid-images/smeagol-gollum.png" width="400" alt="smeagol-gollum">
+            </p>
+            <p>
+            <img src="hybrid-images/smeagol-gollum-process.png" width="400" alt="smeagol-gollum-process">
+            </p>
+            <p>
             <h5>Sources</h5>
             <p>
             [1] <a href="https://www2.seas.gwu.edu/~pless/computationalPhotography/project2.php">Assignment from Professor Pless</a><br>
