--- a/computational_photography/hybrid-images.html
+++ b/computational_photography/hybrid-images.html
@@ -80,6 +80,25 @@
             <img src="hybrid-images/smeagol-gollum-process.png" width="400" alt="smeagol-gollum-process">
             </p>
             <p>
+            I particularly like this one since it shows a change in character as the viewer
+            changes position. I'll take this chance to show the same process in the Fourier
+            domain. Using the same method as before (and getting the same final product), 
+            here are the Fourier transforms of each image along the way.
+            The frequency domain here behaves just how we'd expect.
+            Blurring removes most high frequency points, especially those that are isolated.
+            Subtraction of the blurred image from the original in the high-frequency case 
+            gives just the higher frequency parts of the image.
+            The resulting hybrid image at the end has brightness all over.
+            </p>
+            <p>
+            <img src="hybrid-images/fourier.png" width="400" alt="fourier process images">
+            </p>
+            <p>
+            Here is the same final result but in the Fourier domain.
+            </p>
+            <p>
+            <img src="hybrid-images/fourier-out.png" width="400" alt="fourier final">
+            </p>
             <h5>Sources</h5>
             <p>
             [1] <a href="https://www2.seas.gwu.edu/~pless/computationalPhotography/project2.php">Assignment from Professor Pless</a><br>
