--- a/computational_photography/hybrid-images.html
+++ b/computational_photography/hybrid-images.html
@@ -99,6 +99,17 @@
             <p>
             <img src="hybrid-images/fourier-out.png" width="400" alt="fourier final">
             </p>
+            <h4>Playing around</h4>
+            With the basics down, what fun can be had now?
+            My first interest is in presenting these images in a GIF
+            that shows something like what a person sees as they walk closer to an image.
+            There is a scene in The Lord of the Rings in which Bilbo is seeing Frodo
+            and the Ring for the first time after a significant period of separation.
+            When he locks eyes with the ring... he freaks out and makes a scary face.
+            Here is a hybrid image showing Bilbo before the scary face and the scary face itself.
+            <p>
+            <img src="hybrid-images/scary.png" width="400" alt="scary bilbo">
+            </p>
             <h5>Sources</h5>
             <p>
             [1] <a href="https://www2.seas.gwu.edu/~pless/computationalPhotography/project2.php">Assignment from Professor Pless</a><br>
