--- a/computational_photography/hybrid-images.html
+++ b/computational_photography/hybrid-images.html
@@ -130,6 +130,11 @@
             <p>
             <img src="hybrid-images/scary-gif.gif" width="400" alt="scary bilbo gif">
             </p>
+            A fun GIF.
+            <br>
+            This project was enjoyable, and perhaps more than anything, I was happy to 
+            develop some familiarity with the frequency domain that I hope to carry on 
+            into future work with images.
             <h5>Sources</h5>
             <p>
             [1] <a href="https://www2.seas.gwu.edu/~pless/computationalPhotography/project2.php">Assignment from Professor Pless</a><br>
