--- a/computational_photography/hybrid-images.html
+++ b/computational_photography/hybrid-images.html
@@ -72,6 +72,8 @@
             Another natural subject for me after trees is Lord of the Rings. 
             Here is an image which at a distance shows Smeagol in his early days after
             finding the Ring, while up close you can see the details of an angry Gollum.
+            (I aligned these images by hand, spending more time than I should have finding 
+            images that I liked and then cropping and rotating and mirroring until satisfied.)
             </p>
             <p>
             <img src="hybrid-images/smeagol-gollum.png" width="400" alt="smeagol-gollum">
