--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 I'm also a proud member of
                 <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>.
             </p>
+            <p>
+            Here is <a href="https://github.com/obroadrick/cv/blob/main/cv.pdf?raw=true">my CV</a>.
+            </p>
             <h4>Research</h4>
             <p>
                 My research interests are broad and forming. I like thinking mathematically, 
