--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>.
             </p>
             <p>
-            Here is <a href="https://github.com/obroadrick/cv/blob/main/cv.pdf?raw=true">my CV</a>.
+            Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>.
             </p>
             <h4>Research</h4>
             <p>
