--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <ol>
                 <li>
-                <a href="papers/simulations-of-ballot-polling-rlas.pdf">Broadrick, O., Morin, S., McClearn, G., McBurnett, N., Vora, P. L., Zag&oacute;rski, F.: Simulations of Ballot Polling Risk-Limiting Audits. In: 7th Workshop on Advances in Secure Electronic Voting (Financial Cryptography 2022)</a>
+                Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora and Filip Zag&oacute;rski,<a href="papers/simulations-of-ballot-polling-rlas.pdf">Simulations of Ballot Polling Risk-Limiting Audits</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022.
                 </ol>
             </p>
             <h5>Scheduling</h5>
