--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <ol>
                 <li>
-                Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora and Filip Zag&oacute;rski,<a href="papers/simulations-of-ballot-polling-rlas.pdf">Simulations of Ballot Polling Risk-Limiting Audits</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022.
+                Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski, <a href="papers/simulations-of-ballot-polling-rlas.pdf">"Simulations of Ballot Polling Risk-Limiting Audits"</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022.
                 </ol>
             </p>
             <h5>Scheduling</h5>
