--- a/index.html
+++ b/index.html
@@ -67,24 +67,14 @@
                 <a href="https://www2.seas.gwu.edu/~narahari/">Professor Bhagi Narahari</a> 
                 to develop a scheduling algorithm for neural network tasks using an imprecise computation model. 
                 I will report results here.
+                Some of our progress is reflected in <a href="https://github.com/obroadrick/imprecise">this repository</a>.
             </p>
             <h5>Hotel Recognition</h5>
             <p>
-                Human trafficking cases often have images from hotel rooms
-                as evidence.
-                A group led by <a href="https://www2.seas.gwu.edu/~pless/">Professor Robert Pless</a>
-                has already compiled a database of millions of hotel room images
-                and developed the tool Traffickcam that can be used to 
-                match query images to specific hotel and hotel chains.
-                The National Center for Missing
-                and Exploited Children (NCMEC) uses Traffickcam as it is, but 
-                there is room for improvement.
-                The current version computes a single descriptor of the query image to compare to those in the database.
-                This descriptor could miss high resolution details in the image that
-                are useful for hotel recognition.
-                With a group of other CS seniors, I'm working 
-                on a new version of Traffickcam that uses key points
-                for matching instead.
+                With <a href="https://www2.seas.gwu.edu/~pless/">Professor Robert Pless</a> and three peers, I am working on a search utility that uses image key points
+                to improve on existing hotel recognition methods, especially for query images with high occlusion. An
+                existing search utility is used by the National Center for Missing an Exploited Children for sex trafficking
+                investigations.
             </p>
             <h4>Teaching</h4>
             <p>
