--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/headshot.jpg" width="250px" class="float-md-right p-2"></p>
+            <p><em>Please fill out <a href="https://forms.gle/ob5VrYCKDUpzredw7">this survey</a> about inclusivity in the GW CS Department if you are a GW CS student! Here is <a href="inclusivity-form-flyer.pdf">a flyer</a> with a QR code for it too.</em></p>
             <p>
                 I am a senior undergraduate student studying computer science 
                 and math at 
@@ -129,6 +130,8 @@
             <a href="html/sorting.html">Sorting</a>
             |
             <a href="computational_photography/computational_photography.html">Computational Photography</a>
+            |
+            <a href="inclusivity-form-flyer.pdf">Inclusivity Form</a>
             </p>
         </div>
     </div>
