--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>
                 I am a senior undergraduate student studying computer science 
                 and math at 
-                <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
+                <a href="https://www.seas.gwu.edu/">The George Washington University</a>. 
                 I'm also a proud member of
                 <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>.
             </p>
