--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             |
             <a href="computational_photography/computational_photography.html">Computational Photography</a>
             |
-            <a href="inclusivity-form-flyer.pdf">Inclusivity Form</a>
+            <a href="inclusivity-form-flyer.pdf">GW CS Inclusivity</a>
             </p>
         </div>
     </div>
