--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
             |
             <a href="inclusivity-form-flyer.pdf">GW CS Inclusivity</a>
             </p>
+            <hr>
+            <p class="small text-muted">
+            "They did not die! I never said died. We lost them, I said. We lost them and we cannot find them." <em>Tolkien<\em>
+            </p>
         </div>
     </div>
 </div>
