--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </p>
             <hr>
             <p class="small text-muted">
-            "They did not die! I never said died. We lost them, I said. We lost them and we cannot find them." <em>- Tolkien</em>
+            <em> "They did not die! I never said died. We lost them, I said. We lost them and we cannot find them.", Tolkien</em>
             </p>
         </div>
     </div>
