--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 </ul>
             </p>
             <hr>
+            <!--
             <div>
                 <a class="btn btn-secondary" href="mailto: odbroadrick@gmail.com">
                     <i class="fas fa-envelope"></i>
@@ -121,14 +122,15 @@
                 Resume
                 </a>
             </div>
-            <hr>
+            -->
             <p class="small text-muted">
-            Updated September 2021
+            odbroadrick at gmail dot com 
             |
             <a href="html/snake.html">Snake</a>
             |
-            <a href="html/sorting.html">Sorting</a>
+            <!--<a href="html/sorting.html">Sorting</a>
             |
+            -->
             <a href="computational_photography/computational_photography.html">Computational Photography</a>
             |
             <a href="inclusivity-form-flyer.pdf">GW CS Inclusivity</a>
