--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>.
             </p>
             <p>
-            Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a>.
+            Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a> and <a href="https://github.com/obroadrick">my GitHub</a>.
             </p>
             <h4>Research</h4>
             <p>
