--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </p>
             <hr>
             <p class="small text-muted">
-            <em> "They did not die! I never said died. We lost them, I said. We lost them and we cannot find them.", Tolkien</em>
+            <em> "They did not die! I never said died. We lost them, I said. We lost them and we cannot find them." -Tolkien</em>
             </p>
         </div>
     </div>
@@ -149,4 +149,3 @@ ssorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 </body>
-
