--- a/teaching.html
+++ b/teaching.html
@@ -27,57 +27,10 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
-            <p><img src="./imgs/headshot.jpg" width="250px" class="float-md-right p-2"></p>
-            <p><em>If you are a GW CS student, please fill out <a href="https://forms.gle/ob5VrYCKDUpzredw7">this survey</a> about inclusivity in the GW CS Department! Here is <a href="inclusivity-form-flyer.pdf">a flyer</a> with a QR code for it too.</em></p>
-            <p>
-                I am a senior undergraduate student studying computer science 
-                and math at 
-                <a href="https://www.seas.gwu.edu/">The George Washington University</a>. 
-                I'm also a proud member of
-                <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>.
-            </p>
-            <p>
-            Here is <a href="https://obroadrick.github.io/cv/cv.pdf">my CV</a> and <a href="https://github.com/obroadrick">my GitHub</a>.
-            </p>
-            <h4>Research</h4>
-            <p>
-                My research interests are broad and forming. I like thinking mathematically, 
-                and I've particularly enjoyed working on projects that have social impact.
-            </p>
-            <h5>Statistical Election Audits</h5>
-            <p>
-                Since 2020 I've been working on a team led by 
-                <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>
-                on statistical risk-limiting audits (RLAs)
-                which validate election results within rigorous error bounds.
-                I've enjoyed working on both the theory and implementation, contributing to our
-                <a href="https://github.com/gwexploratoryaudits/r2b2">open source audit software</a>.
-                My first paper will appear shortly in 
-                <a href="https://fc22.ifca.ai/workshops.html">Voting '22</a>, 
-                and additional manuscripts presenting novel audits and 
-                related results are currently being drafted. 
-
-                <ol>
-                <li>
-                Oliver Broadrick, Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi L. Vora, and Filip Zag&oacute;rski, <a href="papers/simulations-of-ballot-polling-rlas.pdf">"Simulations of Ballot Polling Risk-Limiting Audits"</a>. Seventh Workshop on Advances in Secure Electronic Voting, in association with Financial Cryptography 2022.
-                </ol>
-            </p>
-            <h5>Scheduling</h5>
-            <p>
-                I am working with
-                <a href="https://www2.seas.gwu.edu/~narahari/">Professor Bhagi Narahari</a> 
-                to develop a scheduling algorithm for neural network tasks using an imprecise computation model. 
-                I will report results here.
-                Some of our progress is reflected in <a href="https://github.com/obroadrick/imprecise">this repository</a>.
-            </p>
-            <h5>Hotel Recognition</h5>
-            <p>
-                With <a href="https://www2.seas.gwu.edu/~pless/">Professor Robert Pless</a> and three peers, I am working on a search utility that uses image key points
-                to improve on existing hotel recognition methods, especially for query images with high occlusion. An
-                existing search utility is used by the National Center for Missing an Exploited Children for sex trafficking
-                investigations.
-            </p>
-            <h4><a href="teaching.html">>Teaching</a></h4>
+            <h4>Teaching</h4>
+            <div>
+            <em>If you are a student in class in which I am an instructional assistant or in tutoring, please use <a href=""https://forms.gle/MQp1poZjbd5sR2kv5>this form</a> to give me anonymous feedback on my tutoring. Please, don't hold back.</em>
+            </div>
             <p>
                 I love helping folks learn.
                 I have been tutoring math, physics, and computer science since I was in high school.
