--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
             <a href="computational_photography/computational_photography.html">Computational Photography</a>
             |
             <a href="inclusivity-form-flyer.pdf">GW CS Inclusivity</a>
+            |
+            <a href="https://forms.gle/MQp1poZjbd5sR2kv5">Anonymous Teaching Feedback</a>
             </p>
             <hr>
             <p class="small text-muted">
