--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 existing search utility is used by the National Center for Missing an Exploited Children for sex trafficking
                 investigations.
             </p>
-            <h4><a href="teaching.html">>Teaching</a></h4>
+            <h4><a href="teaching.html">Teaching</a></h4>
             <p>
                 I love helping folks learn.
                 I have been tutoring math, physics, and computer science since I was in high school.
