--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/headshot.jpg" width="250px" class="float-md-right p-2"></p>
-            <p><em>If you are a GW CS student, please fill out <a href="https://forms.gle/ob5VrYCKDUpzredw7">this survey</a> about inclusivity in the GW CS Department! Here is <a href="inclusivity-form-flyer.pdf">a flyer</a> with a QR code for it too.</em></p>
+            <p><em>If you are a GW CS student, please see <a href="inclusivity-proposal.pdf">the proposal</a> about inclusivity in the GW CS Department that we wrote based on your responses to the survey! </em></p>
             <p>
                 I am a senior undergraduate student studying computer science 
                 and math at 
