--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <p>
                 With <a href="https://www2.seas.gwu.edu/~pless/">Professor Robert Pless</a> and three peers, I am working on a search utility that uses image key points
                 to improve on existing hotel recognition methods, especially for query images with high occlusion. An
-                existing search utility is used by the National Center for Missing an Exploited Children for sex trafficking
+                existing search utility is used by the National Center for Missing and Exploited Children for sex trafficking
                 investigations.
             </p>
             <h4><a href="teaching.html">Teaching</a></h4>
