--- a/computational_photography/hybrid-images.html
+++ b/computational_photography/hybrid-images.html
@@ -69,7 +69,7 @@
             </p>
             <h4>Lord of the Rings</h4>
             <p>
-            Another natural subject for me after trees is Lord of the Rings. 
+            Another natural subject for me after trees is The Lord of the Rings. 
             Here is an image which at a distance shows Smeagol in his early days after
             finding the Ring, while up close you can see the details of an angry Gollum.
             (I aligned these images by hand, spending more time than I should have finding 
