--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-10 col-md-10">
             <p><img src="./imgs/headshot.jpg" width="250px" class="float-md-right p-2"></p>
-            <p><em>If you are a GW CS student, please see <a href="inclusivity-proposal.pdf">the proposal</a> about inclusivity in the GW CS Department that we wrote based on your responses to the survey! </em></p>
+            <p><em>If you are a GW CS student, the inclusivity survey is now closed, and the responses were used to inform a proposal to the department. Email me (obroadrick at gwu dot edu) if you'd like me to send you the proposal or if you'd like to discuss the matter at all.</em>
             <p>
                 I am a senior undergraduate student studying computer science 
                 and math at 
@@ -132,8 +132,6 @@
             |
             -->
             <a href="computational_photography/computational_photography.html">Computational Photography</a>
-            |
-            <a href="inclusivity-form-flyer.pdf">GW CS Inclusivity</a>
             |
             <a href="https://forms.gle/MQp1poZjbd5sR2kv5">Anonymous Teaching Feedback</a>
             </p>
