--- a/computational_photography/computational_photography.html
+++ b/computational_photography/computational_photography.html
@@ -37,6 +37,7 @@
             <ul>
             <li><a href="./prokudin-gorskii.html">Aligning and compositing images of the Prokudin-Gorskii photo collection</a>
             <li><a href="./hybrid-images.html">Hybrid images</a>
+            <li><a href="./mosaicing.html">Image mosaicing</a>
             </ul>
         </div>
     </div>
